added about page and link to it

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ console.log('This runs in your terminal, not the browser!');
 <html>
   <body>
     <h1>Hello, World!</h1>
+    Read more <a href="/about">about</a>.
   </body>
 </html>
 <style>
