got koch snowflake to show now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import HTMLSnippet from './test.html';
 
     test
     <!-- <HTMLSnippet/> -->
-     <iframe id="viewer" name="viewer" src="./test.html" allow="fullscreen; xr-spacial-tracking"></iframe>
+     <iframe id="viewer" name="viewer" src="./3d_work/koch_snowflake.html" allow="fullscreen; xr-spacial-tracking"></iframe>
     
   </main>
 </Layout>
