styling main page and navbar

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,17 +3,13 @@
 ---
 <!-- Component Template (HTML + JS Expressions) -->
 
-<header class="">
-    <div class="">
-        <nav class="">
-            <ul class="">
-                <li><a href="/" class="">Home</a></li>
-                <li><a href="/about" class="">About</a></li>
-                <li><a href="/3d" class="">3D Projects</a></li>
+<header class="navbar">
+        <nav class="nav">
+            <div class="nav-logo">ANDRES (will be logo)</div>
+            <ul class="nav-list">
+                <li class="nav-list-item"><a href="/" class="">Home</a></li>
+                <li class="nav-list-item"><a href="/about" class="">About</a></li>
+                <li class="nav-list-item"><a href="/3d" class="">3D Projects</a></li>
             </ul>
         </nav>
-    </div>
-
-<style>
-
-</style>
+</header>
