--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,5 +1,5 @@
 ---
-// import '../styles/global.scss'
+import '../styles/style.css'
 
 export interface Props {
   title: string
@@ -23,4 +23,3 @@ const { title } = Astro.props
   </body>
 </html>
 
-<!-- <script src="../scripts/entry.ts"></script> -->
